gen/NgspiceGrammarParser.py
# Generated from C:/Users/samug/PycharmProjects/NgspiceParser\NgspiceGrammar.g4 by ANTLR 4.8
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys

if sys.version_info[1] > 5:
    from typing import TextIO
else:
    from typing import TextIO




class NgspiceGrammarParser(Parser):
    grammarFileName = "NgspiceGrammar.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [DFA(ds, i) for i, ds in enumerate(atn.decisionToState)]

    sharedContextCache = PredictionContextCache()

    literalNames = ["<INVALID>", "'.'", "'+'", "'\n'"]

    symbolicNames = ["<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>",
                     "RID", "CID", "LID", "SWSID", "SWWID", "VID", "IID",
                     "TID", "OID", "UID", "DID", "QID", "JID", "ZID", "MID",
                     "NODE", "RVALUE", "RESISTANCE", "CVALUE", "LVALUE",
                     "VALUES_CONTENTS", "MODEL", "SUBCKT", "ENDS", "Commentline",
                     "WS", "NL"]

    RULE_code = 0
    RULE_linecode = 1
    RULE_device = 2
    RULE_resistance = 3
    RULE_capacitors = 4
    RULE_inductors = 5
    RULE_switch = 6
    RULE_voltage_source = 7
    RULE_current_source = 8
    RULE_lossless_line = 9
    RULE_lossy_line = 10
    RULE_rc_lines = 11
    RULE_diode = 12
    RULE_bjt = 13
    RULE_jfet = 14
    RULE_mesfet = 15
    RULE_mosfet = 16
    RULE_twonodes = 17
    RULE_threenodes = 18
    RULE_fournodes = 19
    RULE_command = 20
    RULE_values_params = 21

    ruleNames = ["code", "linecode", "device", "resistance", "capacitors",
                 "inductors", "switch", "voltage_source", "current_source",
                 "lossless_line", "lossy_line", "rc_lines", "diode", "bjt",
                 "jfet", "mesfet", "mosfet", "twonodes", "threenodes",
                 "fournodes", "command", "values_params"]

    EOF = Token.EOF
    T__0 = 1
    T__1 = 2
    T__2 = 3
    RID = 4
    CID = 5
    LID = 6
    SWSID = 7
    SWWID = 8
    VID = 9
    IID = 10
    TID = 11
    OID = 12
    UID = 13
    DID = 14
    QID = 15
    JID = 16
    ZID = 17
    MID = 18
    NODE = 19
    RVALUE = 20
    RESISTANCE = 21
    CVALUE = 22
    LVALUE = 23
    VALUES_CONTENTS = 24
    MODEL = 25
    SUBCKT = 26
    ENDS = 27
    Commentline = 28
    WS = 29
    NL = 30

    def __init__(self, input_init: TokenStream, output: TextIO = sys.stdout):
        super().__init__(input_init, output)
        self._la = 0  # Token type
        self.checkVersion("4.8")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None

    class CodeContext(ParserRuleContext):

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def linecode(self):
            return self.getTypedRuleContext(NgspiceGrammarParser.LinecodeContext, 0)

        def NL(self):
            return self.getToken(NgspiceGrammarParser.NL, 0)

        def getRuleIndex(self):
            return NgspiceGrammarParser.RULE_code

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterCode"):
                listener.enterCode(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitCode"):
                listener.exitCode(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitCode"):
                return visitor.visitCode(self)
            else:
                return visitor.visitChildren(self)

    def code(self):

        localctx = NgspiceGrammarParser.CodeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_code)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 44
            self.linecode()
            self.state = 45
            self.match(NgspiceGrammarParser.NL)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class LinecodeContext(ParserRuleContext):

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def device(self):
            return self.getTypedRuleContext(NgspiceGrammarParser.DeviceContext, 0)

        def command(self):
            return self.getTypedRuleContext(NgspiceGrammarParser.CommandContext, 0)

        def Commentline(self):
            return self.getToken(NgspiceGrammarParser.Commentline, 0)

        def getRuleIndex(self):
            return NgspiceGrammarParser.RULE_linecode

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterLinecode"):
                listener.enterLinecode(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitLinecode"):
                listener.exitLinecode(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitLinecode"):
                return visitor.visitLinecode(self)
            else:
                return visitor.visitChildren(self)

    def linecode(self):

        localctx = NgspiceGrammarParser.LinecodeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_linecode)
        try:
            self.state = 50
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [NgspiceGrammarParser.RID, NgspiceGrammarParser.CID, NgspiceGrammarParser.LID,
                         NgspiceGrammarParser.SWSID, NgspiceGrammarParser.SWWID, NgspiceGrammarParser.VID,
                         NgspiceGrammarParser.IID, NgspiceGrammarParser.TID, NgspiceGrammarParser.OID,
                         NgspiceGrammarParser.UID, NgspiceGrammarParser.DID, NgspiceGrammarParser.QID,
                         NgspiceGrammarParser.JID, NgspiceGrammarParser.ZID, NgspiceGrammarParser.MID]:
                self.enterOuterAlt(localctx, 1)
                self.state = 47
                self.device()
                pass
            elif token in [NgspiceGrammarParser.T__0]:
                self.enterOuterAlt(localctx, 2)
                self.state = 48
                self.command()
                pass
            elif token in [NgspiceGrammarParser.Commentline]:
                self.enterOuterAlt(localctx, 3)
                self.state = 49
                self.match(NgspiceGrammarParser.Commentline)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class DeviceContext(ParserRuleContext):

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def resistance(self):
            return self.getTypedRuleContext(NgspiceGrammarParser.ResistanceContext, 0)

        def capacitors(self):
            return self.getTypedRuleContext(NgspiceGrammarParser.CapacitorsContext, 0)

        def inductors(self):
            return self.getTypedRuleContext(NgspiceGrammarParser.InductorsContext, 0)

        def switch(self):
            return self.getTypedRuleContext(NgspiceGrammarParser.SwitchContext, 0)

        def voltage_source(self):
            return self.getTypedRuleContext(NgspiceGrammarParser.Voltage_sourceContext, 0)

        def current_source(self):
            return self.getTypedRuleContext(NgspiceGrammarParser.Current_sourceContext, 0)

        def lossless_line(self):
            return self.getTypedRuleContext(NgspiceGrammarParser.Lossless_lineContext, 0)

        def lossy_line(self):
            return self.getTypedRuleContext(NgspiceGrammarParser.Lossy_lineContext, 0)

        def rc_lines(self):
            return self.getTypedRuleContext(NgspiceGrammarParser.Rc_linesContext, 0)

        def diode(self):
            return self.getTypedRuleContext(NgspiceGrammarParser.DiodeContext, 0)

        def bjt(self):
            return self.getTypedRuleContext(NgspiceGrammarParser.BjtContext, 0)

        def jfet(self):
            return self.getTypedRuleContext(NgspiceGrammarParser.JfetContext, 0)

        def mesfet(self):
            return self.getTypedRuleContext(NgspiceGrammarParser.MesfetContext, 0)

        def mosfet(self):
            return self.getTypedRuleContext(NgspiceGrammarParser.MosfetContext, 0)

        def getRuleIndex(self):
            return NgspiceGrammarParser.RULE_device

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterDevice"):
                listener.enterDevice(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitDevice"):
                listener.exitDevice(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitDevice"):
                return visitor.visitDevice(self)
            else:
                return visitor.visitChildren(self)

    def device(self):

        localctx = NgspiceGrammarParser.DeviceContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_device)
        try:
            self.state = 66
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [NgspiceGrammarParser.RID]:
                self.enterOuterAlt(localctx, 1)
                self.state = 52
                self.resistance()
                pass
            elif token in [NgspiceGrammarParser.CID]:
                self.enterOuterAlt(localctx, 2)
                self.state = 53
                self.capacitors()
                pass
            elif token in [NgspiceGrammarParser.LID]:
                self.enterOuterAlt(localctx, 3)
                self.state = 54
                self.inductors()
                pass
            elif token in [NgspiceGrammarParser.SWSID, NgspiceGrammarParser.SWWID]:
                self.enterOuterAlt(localctx, 4)
                self.state = 55
                self.switch()
                pass
            elif token in [NgspiceGrammarParser.VID]:
                self.enterOuterAlt(localctx, 5)
                self.state = 56
                self.voltage_source()
                pass
            elif token in [NgspiceGrammarParser.IID]:
                self.enterOuterAlt(localctx, 6)
                self.state = 57
                self.current_source()
                pass
            elif token in [NgspiceGrammarParser.TID]:
                self.enterOuterAlt(localctx, 7)
                self.state = 58
                self.lossless_line()
                pass
            elif token in [NgspiceGrammarParser.OID]:
                self.enterOuterAlt(localctx, 8)
                self.state = 59
                self.lossy_line()
                pass
            elif token in [NgspiceGrammarParser.UID]:
                self.enterOuterAlt(localctx, 9)
                self.state = 60
                self.rc_lines()
                pass
            elif token in [NgspiceGrammarParser.DID]:
                self.enterOuterAlt(localctx, 10)
                self.state = 61
                self.diode()
                pass
            elif token in [NgspiceGrammarParser.QID]:
                self.enterOuterAlt(localctx, 11)
                self.state = 62
                self.bjt()
                pass
            elif token in [NgspiceGrammarParser.JID]:
                self.enterOuterAlt(localctx, 12)
                self.state = 63
                self.jfet()
                pass
            elif token in [NgspiceGrammarParser.ZID]:
                self.enterOuterAlt(localctx, 13)
                self.state = 64
                self.mesfet()
                pass
            elif token in [NgspiceGrammarParser.MID]:
                self.enterOuterAlt(localctx, 14)
                self.state = 65
                self.mosfet()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ResistanceContext(ParserRuleContext):

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def RID(self):
            return self.getToken(NgspiceGrammarParser.RID, 0)

        def WS(self):
            return self.getToken(NgspiceGrammarParser.WS, 0)

        def twonodes(self):
            return self.getTypedRuleContext(NgspiceGrammarParser.TwonodesContext, 0)

        def RVALUE(self):
            return self.getToken(NgspiceGrammarParser.RVALUE, 0)

        def values_params(self):
            return self.getTypedRuleContext(NgspiceGrammarParser.Values_paramsContext, 0)

        def RESISTANCE(self):
            return self.getToken(NgspiceGrammarParser.RESISTANCE, 0)

        def getRuleIndex(self):
            return NgspiceGrammarParser.RULE_resistance

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterResistance"):
                listener.enterResistance(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitResistance"):
                listener.exitResistance(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitResistance"):
                return visitor.visitResistance(self)
            else:
                return visitor.visitChildren(self)

    def resistance(self):

        localctx = NgspiceGrammarParser.ResistanceContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_resistance)
        try:
            self.state = 81
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input, 2, self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 68
                self.match(NgspiceGrammarParser.RID)
                self.state = 69
                self.match(NgspiceGrammarParser.WS)
                self.state = 70
                self.twonodes()
                self.state = 71
                self.match(NgspiceGrammarParser.RVALUE)
                self.state = 72
                self.values_params()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 74
                self.match(NgspiceGrammarParser.RID)
                self.state = 75
                self.match(NgspiceGrammarParser.WS)
                self.state = 76
                self.twonodes()
                self.state = 77
                self.match(NgspiceGrammarParser.RESISTANCE)
                self.state = 78
                self.match(NgspiceGrammarParser.RVALUE)
                self.state = 79
                self.values_params()
                pass

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class CapacitorsContext(ParserRuleContext):

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CID(self):
            return self.getToken(NgspiceGrammarParser.CID, 0)

        def WS(self):
            return self.getToken(NgspiceGrammarParser.WS, 0)

        def twonodes(self):
            return self.getTypedRuleContext(NgspiceGrammarParser.TwonodesContext, 0)

        def CVALUE(self):
            return self.getToken(NgspiceGrammarParser.CVALUE, 0)

        def values_params(self):
            return self.getTypedRuleContext(NgspiceGrammarParser.Values_paramsContext, 0)

        def getRuleIndex(self):
            return NgspiceGrammarParser.RULE_capacitors

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterCapacitors"):
                listener.enterCapacitors(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitCapacitors"):
                listener.exitCapacitors(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitCapacitors"):
                return visitor.visitCapacitors(self)
            else:
                return visitor.visitChildren(self)

    def capacitors(self):

        localctx = NgspiceGrammarParser.CapacitorsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_capacitors)
        try:
            self.state = 94
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input, 3, self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 83
                self.match(NgspiceGrammarParser.CID)
                self.state = 84
                self.match(NgspiceGrammarParser.WS)
                self.state = 85
                self.twonodes()
                self.state = 86
                self.match(NgspiceGrammarParser.CVALUE)
                self.state = 87
                self.values_params()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 89
                self.match(NgspiceGrammarParser.CID)
                self.state = 90
                self.match(NgspiceGrammarParser.WS)
                self.state = 91
                self.twonodes()
                self.state = 92
                self.values_params()
                pass

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class InductorsContext(ParserRuleContext):

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LID(self):
            return self.getToken(NgspiceGrammarParser.LID, 0)

        def WS(self):
            return self.getToken(NgspiceGrammarParser.WS, 0)

        def twonodes(self):
            return self.getTypedRuleContext(NgspiceGrammarParser.TwonodesContext, 0)

        def LVALUE(self):
            return self.getToken(NgspiceGrammarParser.LVALUE, 0)

        def values_params(self):
            return self.getTypedRuleContext(NgspiceGrammarParser.Values_paramsContext, 0)

        def getRuleIndex(self):
            return NgspiceGrammarParser.RULE_inductors

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterInductors"):
                listener.enterInductors(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitInductors"):
                listener.exitInductors(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitInductors"):
                return visitor.visitInductors(self)
            else:
                return visitor.visitChildren(self)

    def inductors(self):

        localctx = NgspiceGrammarParser.InductorsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_inductors)
        try:
            self.state = 106
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input, 4, self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 96
                self.match(NgspiceGrammarParser.LID)
                self.state = 97
                self.match(NgspiceGrammarParser.WS)
                self.state = 98
                self.twonodes()
                self.state = 99
                self.match(NgspiceGrammarParser.LVALUE)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 101
                self.match(NgspiceGrammarParser.LID)
                self.state = 102
                self.match(NgspiceGrammarParser.WS)
                self.state = 103
                self.twonodes()
                self.state = 104
                self.values_params()
                pass

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class SwitchContext(ParserRuleContext):

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SWSID(self):
            return self.getToken(NgspiceGrammarParser.SWSID, 0)

        def WS(self):
            return self.getToken(NgspiceGrammarParser.WS, 0)

        def fournodes(self):
            return self.getTypedRuleContext(NgspiceGrammarParser.FournodesContext, 0)

        def SWWID(self):
            return self.getToken(NgspiceGrammarParser.SWWID, 0)

        def twonodes(self):
            return self.getTypedRuleContext(NgspiceGrammarParser.TwonodesContext, 0)

        def getRuleIndex(self):
            return NgspiceGrammarParser.RULE_switch

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterSwitch"):
                listener.enterSwitch(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitSwitch"):
                listener.exitSwitch(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitSwitch"):
                return visitor.visitSwitch(self)
            else:
                return visitor.visitChildren(self)

    def switch(self):

        localctx = NgspiceGrammarParser.SwitchContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_switch)
        try:
            self.state = 114
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [NgspiceGrammarParser.SWSID]:
                self.enterOuterAlt(localctx, 1)
                self.state = 108
                self.match(NgspiceGrammarParser.SWSID)
                self.state = 109
                self.match(NgspiceGrammarParser.WS)
                self.state = 110
                self.fournodes()
                pass
            elif token in [NgspiceGrammarParser.SWWID]:
                self.enterOuterAlt(localctx, 2)
                self.state = 111
                self.match(NgspiceGrammarParser.SWWID)
                self.state = 112
                self.match(NgspiceGrammarParser.WS)
                self.state = 113
                self.twonodes()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Voltage_sourceContext(ParserRuleContext):

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VID(self):
            return self.getToken(NgspiceGrammarParser.VID, 0)

        def WS(self):
            return self.getToken(NgspiceGrammarParser.WS, 0)

        def twonodes(self):
            return self.getTypedRuleContext(NgspiceGrammarParser.TwonodesContext, 0)

        def getRuleIndex(self):
            return NgspiceGrammarParser.RULE_voltage_source

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterVoltage_source"):
                listener.enterVoltage_source(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitVoltage_source"):
                listener.exitVoltage_source(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitVoltage_source"):
                return visitor.visitVoltage_source(self)
            else:
                return visitor.visitChildren(self)

    def voltage_source(self):

        localctx = NgspiceGrammarParser.Voltage_sourceContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_voltage_source)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 116
            self.match(NgspiceGrammarParser.VID)
            self.state = 117
            self.match(NgspiceGrammarParser.WS)
            self.state = 118
            self.twonodes()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Current_sourceContext(ParserRuleContext):

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IID(self):
            return self.getToken(NgspiceGrammarParser.IID, 0)

        def WS(self):
            return self.getToken(NgspiceGrammarParser.WS, 0)

        def twonodes(self):
            return self.getTypedRuleContext(NgspiceGrammarParser.TwonodesContext, 0)

        def getRuleIndex(self):
            return NgspiceGrammarParser.RULE_current_source

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterCurrent_source"):
                listener.enterCurrent_source(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitCurrent_source"):
                listener.exitCurrent_source(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitCurrent_source"):
                return visitor.visitCurrent_source(self)
            else:
                return visitor.visitChildren(self)

    def current_source(self):

        localctx = NgspiceGrammarParser.Current_sourceContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_current_source)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 120
            self.match(NgspiceGrammarParser.IID)
            self.state = 121
            self.match(NgspiceGrammarParser.WS)
            self.state = 122
            self.twonodes()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Lossless_lineContext(ParserRuleContext):

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TID(self):
            return self.getToken(NgspiceGrammarParser.TID, 0)

        def WS(self):
            return self.getToken(NgspiceGrammarParser.WS, 0)

        def fournodes(self):
            return self.getTypedRuleContext(NgspiceGrammarParser.FournodesContext, 0)

        def getRuleIndex(self):
            return NgspiceGrammarParser.RULE_lossless_line

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterLossless_line"):
                listener.enterLossless_line(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitLossless_line"):
                listener.exitLossless_line(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitLossless_line"):
                return visitor.visitLossless_line(self)
            else:
                return visitor.visitChildren(self)

    def lossless_line(self):

        localctx = NgspiceGrammarParser.Lossless_lineContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_lossless_line)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 124
            self.match(NgspiceGrammarParser.TID)
            self.state = 125
            self.match(NgspiceGrammarParser.WS)
            self.state = 126
            self.fournodes()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Lossy_lineContext(ParserRuleContext):

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def OID(self):
            return self.getToken(NgspiceGrammarParser.OID, 0)

        def WS(self):
            return self.getToken(NgspiceGrammarParser.WS, 0)

        def fournodes(self):
            return self.getTypedRuleContext(NgspiceGrammarParser.FournodesContext, 0)

        def getRuleIndex(self):
            return NgspiceGrammarParser.RULE_lossy_line

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterLossy_line"):
                listener.enterLossy_line(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitLossy_line"):
                listener.exitLossy_line(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitLossy_line"):
                return visitor.visitLossy_line(self)
            else:
                return visitor.visitChildren(self)

    def lossy_line(self):

        localctx = NgspiceGrammarParser.Lossy_lineContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_lossy_line)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 128
            self.match(NgspiceGrammarParser.OID)
            self.state = 129
            self.match(NgspiceGrammarParser.WS)
            self.state = 130
            self.fournodes()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Rc_linesContext(ParserRuleContext):

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def UID(self):
            return self.getToken(NgspiceGrammarParser.UID, 0)

        def WS(self):
            return self.getToken(NgspiceGrammarParser.WS, 0)

        def threenodes(self):
            return self.getTypedRuleContext(NgspiceGrammarParser.ThreenodesContext, 0)

        def getRuleIndex(self):
            return NgspiceGrammarParser.RULE_rc_lines

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterRc_lines"):
                listener.enterRc_lines(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitRc_lines"):
                listener.exitRc_lines(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitRc_lines"):
                return visitor.visitRc_lines(self)
            else:
                return visitor.visitChildren(self)

    def rc_lines(self):

        localctx = NgspiceGrammarParser.Rc_linesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_rc_lines)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 132
            self.match(NgspiceGrammarParser.UID)
            self.state = 133
            self.match(NgspiceGrammarParser.WS)
            self.state = 134
            self.threenodes()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class DiodeContext(ParserRuleContext):

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DID(self):
            return self.getToken(NgspiceGrammarParser.DID, 0)

        def WS(self):
            return self.getToken(NgspiceGrammarParser.WS, 0)

        def twonodes(self):
            return self.getTypedRuleContext(NgspiceGrammarParser.TwonodesContext, 0)

        def getRuleIndex(self):
            return NgspiceGrammarParser.RULE_diode

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterDiode"):
                listener.enterDiode(self)
